--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.21.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "edge.js": "^6.2.0",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.0.1",
+    "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "tailwind-merge": "^2.5.4",
@@ -35,6 +39,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.17.3",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
