--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -26,14 +27,19 @@
     "crypto-js": "^4.2.0",
     "edge.js": "^6.2.0",
     "ioredis": "^5.4.1",
+    "jose": "^5.9.6",
     "lucide-react": "^0.454.0",
     "next": "15.0.1",
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "recharts": "^2.13.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
