--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -23,13 +22,16 @@
     "bcrypt": "^5.1.1",
     "bullmq": "^5.21.2",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "edge.js": "^6.2.0",
+    "i": "^0.3.7",
     "ioredis": "^5.4.1",
     "jose": "^5.9.6",
     "lucide-react": "^0.454.0",
     "next": "15.0.1",
+    "next-cloudinary": "^6.16.0",
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
