--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "bcrypt": "^5.1.1",
@@ -25,6 +26,7 @@
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "edge.js": "^6.2.0",
     "i": "^0.3.7",
     "ioredis": "^5.4.1",
@@ -34,6 +36,7 @@
     "next-cloudinary": "^6.16.0",
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-69d4b800-20241021",
+    "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-lazy-load-image-component": "^1.6.2",
     "recharts": "^2.13.2",
