--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "overrides": {
     "react-is": "^19.0.0-rc-69d4b800-20241021"
