--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.13.2",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
