--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "edge.js": "^6.2.0",
+    "googleapis": "^144.0.0",
     "i": "^0.3.7",
     "ioredis": "^5.4.1",
     "jose": "^5.9.6",
