--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-lazy-load-image-component": "^1.6.2",
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.2",
+    "socket.io-client": "^4.8.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
