fix-bug-and-refacto

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.words": [
         "Autentication",
+        "autoincrement",
         "bullmq",
         "cloudinary",
         "clsx",
+        "datasource",
         "lucide",
         "toastify",
+        "turbopack",
         "uuidv",
         "webp",
         "zustand"
