--- a/package.json
+++ b/package.json
@@ -27,11 +27,9 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
-    "crypto-js": "^4.2.0",
-    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "edge.js": "^6.2.0",
     "googleapis": "^144.0.0",
-    "i": "^0.3.7",
     "ioredis": "^5.4.1",
     "jose": "^5.9.6",
     "lucide-react": "^0.454.0",
@@ -39,7 +37,6 @@
     "next-cloudinary": "^6.16.0",
     "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-lazy-load-image-component": "^1.6.2",
     "react-toastify": "^10.0.6",
