performance-optimize-and-code-refacotr

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,9 +24,9 @@
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"],
-  "ts-node": {
-    "compilerOptions": {
-      "module": "commonjs"
-    }
-  }
+//  "ts-node": {
+//    "compilerOptions": {
+//      "module": "commonjs"
+//    }
+//  }
 }
